# notes-classic

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  initial.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  CODE-REVIEW.md  EVERNOTE-IMPORT.md  EXPORT.md  IMPORTS.md  IMPORT_IMAGES.md  PROPOSALS.md  README.md  assets.md  schema-cleanup.md  schema-reserved-fields.md
docs/architecture/: README.md  backend-and-menu.md  controllers-and-store.md  database.md  editor.md  error-handling.md  extension-points.md  file-by-file.md  frontend-ui.md  goals-and-constraints.md  layered-architecture.md  localization.md  performance.md  search-and-ocr.md  services-and-content.md  (+5 more)
scripts/: evernote_export.js  evernote_import_temp.js  verify_import_examples.cjs  verify_notes_classic_export.cjs
src/: App.tsx  index.css  main.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/i18n/: en.json  ru.json
src-tauri/src/: db.rs  main.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  utils.rs
src-tauri/src/db/repo/: attachments.rs  history.rs  mod.rs  notebooks.rs  notes.rs  ocr.rs  tags.rs
src-tauri/src/services/: app.rs  export.rs  files.rs  history.rs  i18n.rs  menu.rs  mod.rs  notebooks.rs  notes.rs  ocr.rs  pdf.rs  prelude.rs  storage.rs  tags.rs  utils.rs
src-tauri/src/services/import/: common.rs  evernote.rs  mod.rs  notes_classic.rs  selectors.rs
(+86 files in other folders)
